# pandas_factory_task

./: .dockerignore  .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  main.ipynb  pyproject.toml  solution.ipynb  solution.py
.github/workflows/: code-quality-and-tests.yml
core/models/: __init__.py  base.py  processed_data.py  raw_data.py
core/repositories/: base.py  raw_repository.py
core/services/: base.py  material_service.py
core/sql/procedures/: bom_explosion.sql
docker_compose/: docker-compose.yml
resources/csv/processed/: factory_report.csv
tests/: test_material_service.py  test_raw_repository.py
utils/design/: developer.py  message.py
