[project]
name = "pandas-factory-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black[jupyter]>=26.1.0",
    "fastapi>=0.128.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "lint>=1.2.1",
    "loguru>=0.7.3",
    "markupsafe==2.1.3",
    "pandas>=2.3.3",
    "pre-commit>=4.5.1",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pygame>=2.6.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.45",
    "tabulate>=0.9.0",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
